0.5.0
- Feature: Check for overlapping events on registration (#762)
- Feature: Add tx_seminars_place and tx_seminars_placebag classes (#767)
- Change: Put some of the date- and time methods into a separate class (#766)
- Change: Make more fields in the BE excludefields (#759)
- Change: Add labels "telephone" and "E-mail address" on the second registration page and in the thank-you e-mail (#755)
- Change: Allow up to 9999 vacancies (#756)
- Change: When prefilling the country field, also use static_info_country from fe_users (#754)
- Change: Improve the list view formatting (#753)
- Feature: Remember the selected payment data (#750)
- Fix: Billing address is not displayed in the second step of the registration process (#752)
- Fix: TypoScript configuration doesn't exist in class.tx_seminars_tcemain.php (#733)
- Change: Include the additional times and places into the thank-you e-mail (#722)
- Fix: Missing additional link parameters (e.g. target) in seminar place, speaker and organizer records (#682)
- Fix: Subject in confirmation mail is scrambled (#285)
- Change: Updated the Danish translation (#702)
- Fix: E-mails are empty if a HTML template is selected via flexforms (#710)
- Feature: Added Russian translation by Nickolas A. Shadrin (#334)
- Change: Switch the description field in the FE event editor from RTE to TEXTAREA (#709)
- Change: Events with a maximal number of 0 vacancies should be considered to not require registration (#703)
- Feature: Added a countdown function (#425)
- Change: Hide payment-related fields from the registration form if the event doesn't have a price (#691, #692)
- Change: Moved the TCE value checking stuff to the seminar class (#605)
- Change: Speed up the back-end modules with caching (#670, #672)
- Change: Make the sorting order of events in the BE configurable (#517)
- Change: In the list view, use "register now" as link text even if the user is not logged in yet (#616)