@@ -1,4 +1,5 @@
 0.5.0
+- Fix: Mod2: event list is displayed although the user is not allowed to access them (#637)
 - Feature: Check for overlapping events on registration (#762)
 - Feature: Add tx_seminars_place and tx_seminars_placebag classes (#767)
 - Change: Put some of the date- and time methods into a separate class (#766)
